--- a/.github/workflows/update-webpage.yml
+++ b/.github/workflows/update-webpage.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       - master
   schedule:
-    - cron: '00 01 * * *'
+    - cron: '*/15 00 * * *'
   workflow_dispatch:
 
 jobs:
