--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,7 @@ config.py
 
 index.html
 plot.png
+jquery-jvectormap-2.0.5.css
+jquery-jvectormap-2.0.5.min.js
+jquery-jvectormap-it_regions-mill.js
+jquery.js
